--- a/GatewayMicroServices/src/main/resources/application.properties
+++ b/GatewayMicroServices/src/main/resources/application.properties
@@ -7,3 +7,11 @@ eureka.client.fetch-registry=true
 spring.cloud.gateway.routes[0].id=contact-service
 spring.cloud.gateway.routes[0].uri=lb://CONTACT-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/contact/**
+
+spring.cloud.gateway.routes[1].id=order-service
+spring.cloud.gateway.routes[1].uri=lb://ORDER-SERVICE
+spring.cloud.gateway.routes[1].predicates[0]=Path=/order/**
+
+spring.cloud.gateway.routes[2].id=payment-service
+spring.cloud.gateway.routes[2].uri=lb://PAYMENT-SERVICE
+spring.cloud.gateway.routes[2].predicates[0]=Path=/payment/**
