--- a/ContactMicroServices/src/main/resources/application.properties
+++ b/ContactMicroServices/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=CONTACT-SERVICE
-server.port=8000
+server.port=${PORT:0}
 
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=false
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
